--- a/iCarServices/css/style.css
+++ b/iCarServices/css/style.css
@@ -2,11 +2,12 @@
 *{
     padding:0;
     margin: 0;
+    font-family: 'poppins', 'sans-serif';
+    box-sizing: border-box;
+
 }
 
-#wrapper {
-    font-family: 'poppins', 'sans-serif';
-}
+
 
 h1, h2, h3 {
     text-align: center;
@@ -215,6 +216,83 @@ nav ul li a {
 }
 
 
+/* ------------------- */
+
+.testimonials{
+	/* min-height: 50vh; */
+	background-color: #f7f7f7;
+
+	width: 100%;
+	padding:50px 15px;
+}
+
+.container{
+	max-width: 1170px;
+	margin: auto;
+}
+.testimonials .title{
+	margin-bottom:60px
+}
+
+
+.testimonials .slider{
+ border:1px solid #333333;
+ max-width: 600px;
+ margin: auto;
+ text-align: center;
+ padding:30px;
+}
+.testimonials .slider .slide{
+	display: none;
+}
+.testimonials .slider .slide.active{
+	
+	display: block;
+	animation: slide 1s ease;
+}
+@keyframes slide{
+	0%{
+		opacity:0;
+		transform: translateX(-15px);
+	}
+	100%{
+	   opacity:1;
+		transform: translateX(0px);	
+	}
+}
+
+.testimonials .slider .client-info h3{
+	font-weight: bold;
+	margin:30px 0 10px;
+}
+.testimonials .slider .client-info span{
+	display: block;
+	font-size:16px;
+	color:#11bead;
+}
+.testimonials .slider-indicator{
+	text-align: center;
+	padding-top:30px;
+}
+.testimonials .slider-indicator img{
+	max-height:80px;
+	max-width:80px;
+	border-radius:50%;
+	display: inline-block;
+	margin:0 8px;
+	opacity:0.2;
+	border:4px solid #fff;
+	cursor: pointer;
+	transition: opacity 1s ease;
+}
+.testimonials .slider-indicator img.active{
+	opacity:1;
+}
+
+
+
+
+
 /* ---------------------- */
 
 
@@ -285,11 +363,52 @@ input::placeholder {
     margin-left: 10px;
 }
 /* 
------------- */
+
+
+/* --------------- */
+
+.before-footer .flex{
+    justify-content: space-between;
+}
+
+.before-footer{
+    background-color: #D1E0EB;
+    padding: 80px 0px;
+}
+
+.before-footer ul{
+    list-style: none;
+    margin-top: 15px;
+    font-size: 0.85em;
+}
+
+.col1 h3{
+    text-align: left;
+}
+
+@media (max-width:767px){
+    .col1{
+        margin-bottom: 20px;
+
+    }
+
+    .col1 h3{
+        font-size: 20px!important;
+        text-align: center!important;
+    }
+
+    .col1 ul {
+        text-align: center;
+    }
+
+
+}
+
+/* ------------  */
 
 footer {
     background-color: #0C3C60;
-    padding: 75px 0 60px;
+    padding: 35px 0;
     color: #fff;
 }
 
@@ -389,7 +508,7 @@ footer ul li {
         position: absolute;
         right: 0;
         background-color: #0C3C60;
-        top: 100%;
+        top: 65px;
         z-index: 3;
         width: 100%;
     }
